<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_one"
    android:padding="30dp"
    tools:context=".Baby_Care">

    <Button
        android:id="@+id/baby_ailments_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/baby_ailments_textview"
        android:background="@drawable/round_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/common_problems_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/common_problems_textview"
        android:background="@drawable/round_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/eating_habits_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/eating_habits_textview"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/tips_weather_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/tips_and_weather_textview"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"/>

    <Button
        android:id="@+id/baby_vaccination_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/vaccinations_textview"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"/>


</LinearLayout>