<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_one"
    android:padding="30dp"
    tools:context=".Baby_Ailments">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/common_cold_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/common_cold_textview" />

        <Button
            android:id="@+id/common_fever_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/common_fever_testview" />

        <Button
            android:id="@+id/constipation_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/constipation_textview" />

        <Button
            android:id="@+id/diarrhoea_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/diarrhoea_textview" />

        <Button
            android:id="@+id/eczema_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/eczema_textview" />

        <Button
            android:id="@+id/gas_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/gas_textview" />

        <Button
            android:id="@+id/sore_throat_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/sore_throat_textview" />


    </LinearLayout>

</ScrollView>