<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_one"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Eating_Habits">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/baby_diet_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/about_baby_diet_textview" />

        <Button
            android:id="@+id/zero_three_months_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/_0_to_3_months_old_textview" />

        <Button
            android:id="@+id/three_six_months_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/_3_to_6_months_old_textview" />

        <Button
            android:id="@+id/six_eight_months_button"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/_6_to_8_months_old_textview" />

        <Button
            android:id="@+id/eight_ten_months_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/oval_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:text="@string/_8_to_10_months_old_textview" />

    </LinearLayout>

</ScrollView>