<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    tools:context=".Eczema">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:id="@+id/eczema_imageview"
        android:scaleType="fitXY"
        android:src="@drawable/baby_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eczema_scrollview"
        android:layout_marginTop="20dp"
        android:layout_below="@id/eczema_imageview">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/identify_symptomes_textview"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Identify Symptomes"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/identify_symptomes_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/eczema_symptomes"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/natural_treat_textview"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Natural Way to Treat it"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/natural_treat_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/eczema_treatment"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/calcium_textview"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Tips"
                android:layout_gravity="center"
                android:textSize="23sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tips_description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/eczema_tips"
                android:layout_marginTop="10dp" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>